2009-09-16	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/userextaddapiset.c: Disable code that is only used when
	ITRON or POSIX is enabled.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/utils-cp.c: Include <utime.h> instead of
	<sys/utime.h> for better POSIX compilance.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/malloc_p.h: Rely upon uintmax_t and PRIuMAX being
	provided.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/libio_init.c, libcsupport/src/libio.c: 
	Reflect rtems_libio_number_iops being uint32_t.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/libio_init.c: Remove extern uint32_t
	rtems_libio_number_iops.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/fcntl.c, libcsupport/src/malloc_boundary.c,
	libcsupport/src/newlibc_reent.c, libcsupport/src/printk_plugin.c,
	libcsupport/src/stat.c, libcsupport/src/tcflow.c,
	libcsupport/src/tcflush.c, libcsupport/src/tcsendbreak.c,
	libcsupport/src/tcsetpgrp.c, libcsupport/src/unlink.c,
	libcsupport/src/unmount.c, libcsupport/src/write_r.c:
	Add __attribute__((unused)) to function arguments.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/__brk.c, libcsupport/src/__gettod.c,
	libcsupport/src/__sbrk.c, libcsupport/src/__times.c,
	libcsupport/src/_calloc_r.c, libcsupport/src/_free_r.c,
	libcsupport/src/_malloc_r.c, libcsupport/src/_realloc_r.c,
	libcsupport/src/_rename_r.c, libcsupport/src/assocnamebad.c,
	libcsupport/src/close.c, libcsupport/src/envlock.c,
	libcsupport/src/fstat.c, libcsupport/src/getgroups.c,
	libcsupport/src/getpid.c, libcsupport/src/isatty_r.c,
	libcsupport/src/link.c, libcsupport/src/lseek.c,
	libcsupport/src/open.c, libcsupport/src/read.c,
	libcsupport/src/setpgid.c: Add __attribute__((unused)) to function
	arguments.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1441/cpukit
	* libcsupport/src/tcgetprgrp.c: Remove.